# cv-datasheets

./: .gitignore  CHANGELOG.md  README.md  compile_datasheets.py  generate-datasheet.py  generate_datasheet.py  pyproject.toml  shared_task_datasheets.py  shared_task_langs.md  update_final_md.py  update_release.py
.github/workflows/: compile-latest.yml  preview.yml
_legacy/metadata/: metadata.tsv  scs-metadata.json  sps-locales.json  update-metadata.sh
_legacy/scripts/: datasheet.py  fetch_scs_sentences.py
content/: _field_map.json
content/_example/: README.md
content/_template/: README.md
docs/: ARCHITECTURE.md  COMPILING.md  CONTRIBUTING.md
metadata/: datasheet-languages-23.0.tsv  datasheet-languages.tsv  funding.tsv  generate-metadata.py  language-requests.tsv  locale-extras.json  metadata.tsv  original_prs.csv  scs-sentences.json  template-languages.json
metadata/api-snapshots/: languagedata-20260226.json  languagedata-20260309.json  languagedata-20260612.json
metadata/scs/: extract-contributable.py
metadata/sps/: extract-contributable.py
releases/: datasheets-2025-09-05.json  datasheets-2025-12-05.json  datasheets-2026-03-09.json  datasheets-2026-06-12.json  datasheets-23.0-2025-09-05.json  datasheets-24.0-2025-12-05.json  datasheets-25.0-2026-03-09.json  datasheets-latest.json  datasheets-v25.0-2026-03-06.json
schema/: datasheets.schema.json
scripts/: datasheet.py  extract_community_data.py  fetch_api_metadata.py  preview_datasheets.py
templates/: base.md.j2  scripted.md.j2  spontaneous.md.j2
templates/i18n/: en.json  es.json  zh-TW.json
(+2136 files in other folders)
